--- a/prd/index.html
+++ b/prd/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>webpack模块化</title>
 	<link rel="stylesheet" href="./bundle.css">
 </head>
